--- a/config.toml
+++ b/config.toml
@@ -15,10 +15,10 @@
 baseurl = "http://kslhacks.com"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
-title = "KSLHacks"
+title = "KSLHacks – // TODO: inspire, create, hack, enjoy"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "hugo-tranquilpeak-theme"
-# googleAnalytics = "UA-123-45"
+googleAnalytics = "UA-99057010-1"
 paginate = 7
 canonifyurls = true
 
