--- a/config.toml
+++ b/config.toml
@@ -57,19 +57,19 @@ canonifyurls = true
   identifier = "about"
   name = "About Kevin"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-address-card\"></i>"
-  url = "/about"
+  url = "/page/about"
 [[menu.main]]
   weight = 3
   identifier = "projects"
   name = "Projects"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-terminal\"></i>"
-  url = "/projects"
+  url = "/page/projects"
 [[menu.main]]
   weight = 4
   identifier = "events"
   name = "Events"
   pre = "<i class=\"sidebar-button-icon fa fa-lg fa-calendar\"></i>"
-  url = "/events"
+  url = "/page/events"
 [[menu.main]]
   weight = 5
   identifier = "categories"
@@ -149,6 +149,10 @@ canonifyurls = true
   # Otherwise put your image in folder `static/_images/` (development)  or in `source/assets/images/` if you can't or don't want to build the theme,
   # and use relative url : `your-image.png`
   coverImage = "cover_city.png"
+
+  # Set value for background color (hex). Suggested that you choose a dark color since the text on the page is white. This will help users view your website
+  # even when the cover photo is still loading. The default value is white, so until the cover image loads, the text will not be readable.
+  fallbackCoverColor = "#0B0D19"
 
   # Display an image gallery at the end of a post which have photos variables (false: disabled, true: enabled)
   imageGallery = true
