edit page: events

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@
 baseurl = "http://kslhacks.com"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
-title = "// TODO: inspire, create, hack, enjoy"
+title = "// inspire, create, hack, enjoy"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "kslhacks"
 googleAnalytics = "UA-99057010-1"
